# static_site

./: Cargo.toml  README.md
public/: hello-world.html  index.html
src/: main.rs  templates.rs
