[package]
name = "static_site"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
axum = "0.2.5"
hotwatch = "0.4.5"
pulldown-cmark = "0.8.0"
tokio = { version = "1.12.0", features = ["full"] }
tower-http = { version = "0.1.1", features = ["fs"] }
walkdir = "2.3.2"
